update alt image

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </p>
           <footer>
             <button class="button-text montserrat-bold">
-              <img src="/pictures/icon-cart.svg" alt="Add to cart" />
+              <img src="/pictures/icon-cart.svg" alt="Add to bucket" />
               Add to Cart
             </button>
           </footer>
