--- a/index.html
+++ b/index.html
@@ -4,46 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Preview Card Component</title>
-    <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet"
     />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <main>
       <article>
-        <header>
-          <picture>
-            <source
-              media="(min-width: 768px)"
-              srcset="/pictures/image-product-desktop.jpg"
-            />
-            <img
-              src="/pictures/image-product-mobile.jpg"
-              alt="Bottle of perfume"
-              class="img-mobile"
-            />
-          </picture>
-        </header>
-        <section>
-          <h1 class="overline montserrat-medium">PERFUME</h1>
+        <picture>
+          <source
+            media="(min-width: 768px)"
+            srcset="/pictures/image-product-desktop.jpg"
+          />
+          <img
+            src="/pictures/image-product-mobile.jpg"
+            alt="Bottle of perfume"
+            class="img-mobile"
+          />
+        </picture>
+        <div class="content">
+          <p class="overline montserrat-medium">Perfume</p>
           <h2 class="display fraunces-bold">Gabrielle Essence Eau De Parfum</h2>
           <p class="description montserrat-medium">
             A floral, solar and voluptuous interpretation composed by Olivier
             Polge, Perfumer-Creator for the House of CHANEL.
           </p>
           <p class="price display fraunces-bold">
-            $149.99 <span class="montserrat-medium">$169.99</span>
+            $149.99 <del class="montserrat-medium">$169.99</del>
           </p>
-          <footer>
-            <button class="button-text montserrat-bold">
-              <img src="/pictures/icon-cart.svg" alt="Add to bucket" />
-              Add to Cart
-            </button>
-          </footer>
+          <button class="button-text montserrat-bold">
+            <img src="/pictures/icon-cart.svg" alt="" />
+            Add to Cart
+          </button>
         </section>
       </article>
     </main>
