update HTML & CSS

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </picture>
         <div class="content">
           <p class="overline montserrat-medium">Perfume</p>
-          <h2 class="display fraunces-bold">Gabrielle Essence Eau De Parfum</h2>
+          <h2 class="fraunces-bold">Gabrielle Essence Eau De Parfum</h2>
           <p class="description montserrat-medium">
             A floral, solar and voluptuous interpretation composed by Olivier
             Polge, Perfumer-Creator for the House of CHANEL.
@@ -37,7 +37,7 @@
             $149.99 <del class="montserrat-medium">$169.99</del>
           </p>
           <button class="button-text montserrat-bold">
-            <img src="/pictures/icon-cart.svg" alt="" />
+            <img src="/pictures/icon-cart.svg" alt="" class="iconBtn"/>
             Add to Cart
           </button>
         </section>
